# projecthub-packs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  doc-fix.yaml  request.yaml
.github/workflows/: docs-check.yml  metadata-lint.yml  release.yml
.husky/: pre-commit
packs/go-pack/: README.md  metadata.yaml
packs/go-pack/templates/go-gitignore/: go.gitignore
packs/go-pack/templates/go-workspace/: .golangci.yml  Makefile
packs/nodejs-pack/: README.md  metadata.yaml
packs/nodejs-pack/templates/nodejs-gitignore/: nodejs.gitignore
packs/nodejs-pack/templates/nodejs-workspace/: .eslintrc.json  package.json
packs/python-pack/: README.md  metadata.yaml
packs/python-pack/templates/python-gitignore/: python.gitignore
packs/python-pack/templates/python-workspace/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
packs/python-pack/templates/python-workspace/src/: __init__.py
packs/react-pack/: README.md  metadata.yaml
packs/react-pack/templates/react-gitignore/: react.gitignore
packs/react-pack/templates/react-workspace/: package.json
packs/rust-pack/: README.md  metadata.yaml
packs/rust-pack/templates/rust-gitignore/: .gitignore  metadata.yaml
packs/rust-pack/templates/rust-workspace/: .gitignore  Cargo.toml  metadata.yaml
packs/svelte-pack/: LICENSE  README.md  metadata.yaml
packs/svelte-pack/templates/svelte-gitignore/: svelte.gitignore
packs/svelte-pack/templates/svelte-workspace/: .prettierrc  eslint.config.js  package.json
packs/vue-pack/: README.md  metadata.yaml
packs/vue-pack/templates/vue-gitignore/: vue.gitignore
packs/vue-pack/templates/vue-workspace/src/: App.vue
(+13 files in other folders)
