[project]
name = "your-python-workspace"
version = "0.1.0"
description = "ProjectHub Python workspace skeleton"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
